# uv-monorepo

./: .gitignore  pyproject.toml
