[project]
name = "monorepo"
version = "0.1.0"
description = "Example monorepo based on uv"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["spacebridge"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.3",
]

[tool.uv.sources]
spacebridge = { workspace = true}

[tool.uv.workspace]
members = ["packages/*"]
